apps/nas/sonarr/httproute-envoy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-envoy
  namespace: default
spec:
  parentRefs:
  - name: envoy-gw
    namespace: envoy-gateway-system
    sectionName: wahooli-https
  - name: envoy-gw-private
    namespace: envoy-gateway-system
    sectionName: wahooli-https
  hostnames:
  - "sonarr.${domain_wahoo_li:=wahoo.li}"
  rules:
  - backendRefs:
    - name: ak-outpost-nasse-proxy
      port: 9000
